ingress-with-AGIC/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-ingress
# Agar tum Kubernetes v1.19+ (AKS latest) use kar rahe ho, to annotation dene ki zarurat nahi hai.
spec:
  ingressClassName: azure-application-gateway

  rules:
    - http:
        paths:
          - path: /vm
            pathType: Prefix
            backend:
              service:
                name: vm-service
                port:
                  number: 80

          - path: /storage
            pathType: Prefix
            backend:
              service:
                name: stg-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-service
                port:
                  number: 
                  


---


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: agic-ingress
# # Agar tum Kubernetes v1.19+ (AKS latest) use kar rahe ho, to annotation dene ki zarurat nahi hai.
# spec:
#   ingressClassName: azure-application-gateway

# rules:
#   - host: infra.rahulinfra.com
#     http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: infra-service

#   - host: vm.rahulinfra.com
#     http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: vm-service

#   - host: storage.rahulinfra.com
#     http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: stg-service
